# langchain-age

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_KR.md  pyproject.toml
.claude/skills/langchain-age/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: bench.py
docker/: .env.example  Dockerfile  docker-compose.yml
docker/init/: 01_init_extensions.sql
docs/en/: api-reference.md  blog-graphrag-with-postgresql.md  getting-started.md  tutorial.md
docs/ko/: api-reference.md  getting-started.md  tutorial.md
examples/: 01_basic_graph_qa.py  02_vector_search.py  03_graph_rag.py
langchain_age/: __init__.py  chat_message_histories.py
langchain_age/_vendor/age/: LICENSE
langchain_age/chains/: __init__.py  graph_cypher_qa_chain.py
langchain_age/graphs/: __init__.py  age_graph.py
langchain_age/utils/: __init__.py  agtype.py  cypher.py
langchain_age/vectorstores/: __init__.py  age_vector.py
notebooks/: 01_graph.ipynb  02_vector.ipynb  03_graph_vector.ipynb  04_neo4j_vs_age.ipynb
scripts/: smoke_build.sh
tests/: conftest.py
tests/integration/: test_age_graph.py  test_age_vector.py  test_compatibility.py
tests/unit/: test_utils.py
