[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-age"
version = "0.3.0"
description = "LangChain integration for Apache AGE (graph) + pgvector (vector) on PostgreSQL"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["langchain", "apache-age", "pgvector", "graph-database", "postgresql", "rag", "graphrag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LangChain v1 — mirrors the version requirement used by langchain-neo4j
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-community>=0.4.0",
    "langchain>=1.0.0,<2.0.0",
    # Apache AGE Python driver (psycopg3-based, provides Vertex/Edge/Path types)
    "apache-age-python>=0.0.7",
    # psycopg3 – used by apache-age-python and AGEVector
    "psycopg[binary]>=3.1.0",
    # pgvector Python adapter (registers vector type for psycopg3)
    "pgvector>=0.3.0",
    # numpy – required for pgvector embedding type conversion
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "langchain-openai>=0.2.0",
    "numpy>=1.24",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/BAEM1N/langchain-age"
Repository = "https://github.com/BAEM1N/langchain-age"
Issues = "https://github.com/BAEM1N/langchain-age/issues"

[tool.hatch.build.targets.wheel]
packages = ["langchain_age"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
