[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-age"
version = "0.1.2"
description = "LangChain integration for Apache AGE (graph) + pgvector (vector) on PostgreSQL"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["langchain", "apache-age", "pgvector", "graph-database", "postgresql", "rag", "graphrag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies: graph features work out of the box via vendored age SDK.
# Vector-specific deps (pgvector, numpy) are in [project.optional-dependencies].
dependencies = [
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-community>=0.4.0",
    "langchain>=1.0.0,<2.0.0",
    # psycopg3 — used by graph and vector
    "psycopg[binary]>=3.1.0",
    # antlr4 — required by vendored apache-age-python for agtype parsing
    "antlr4-python3-runtime>=4.11.0",
]

[project.optional-dependencies]
# Vector: AGEVector (pgvector + numpy)
vector = [
    "pgvector>=0.3.0",
    "numpy>=1.24",
]
# Everything (graph is included by default, this adds vector)
all = [
    "langchain-age[vector]",
]
dev = [
    "langchain-age[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "langchain-openai>=0.2.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/BAEM1N/langchain-age"
Repository = "https://github.com/BAEM1N/langchain-age"
Issues = "https://github.com/BAEM1N/langchain-age/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["langchain_age"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["langchain_age/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E402", "E741"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["langchain_age/_vendor"]
